--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ Welcome to Cheyanne Walker's web site!
 Hello! I'm Cheyanne Walker. Welcome to my digital home. More coming soon!
 </p>
 
-
+<img src=https://image-renderer.sinclairstoryline.com/prod/image-renderer/3x4/full/236p/center/80/d75ec8f9-61a5-4857-b50e-a254e8662a48-largeScale_CheyanneWalker.jpg/>
+  
+  
+  
   </body> 
 </html>
