--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@ Welcome to Cheyanne Walker's web site!
 </h1> 
 
 <p> 
-Hello! I'm Cheyanne Walker. Welcome to my digital home. More coming soon!
-</p>
+Hello! I'm Cheyanne Walker. Welcome to my digital home. Cheyanne Walker is a proud graduate of the University of West Georgia with a journalism major and marketing minor.
+
+While in college, she worked as an anchor for the University of West Georgia’s news station, WUTV, covering sporting and community events for two years.
+
+When she wasn't anchoring the news, she was an investigative journalist for the University of West Georgia's radio show, The College Circuit.
+
+In her spare time, Cheyanne enjoys hanging out with family and friends, playing the piano, and serving up a tough game of volleyball. She volunteers with the United One Foundation by assisting high school students with their SAT, ACT, and/or GED testing registration, organizing college fairs, and organizing career fairs.
+
+  
+  </p>
 
 <img src=https://image-renderer.sinclairstoryline.com/prod/image-renderer/3x4/full/236p/center/80/d75ec8f9-61a5-4857-b50e-a254e8662a48-largeScale_CheyanneWalker.jpg/>
-  
+  https://13wham.com/news/local/webster-parent-reacts-to-blackface-photo#
+  https://13wham.com/news/local/19th-ward-neighbors-frustrated-by-growing-exodus-of-businesses
+  https://13wham.com/search?find=CHeyanne%20%20Walker
   
   
   </body> 
