--- a/Photobubble.html
+++ b/Photobubble.html
@@ -9,7 +9,7 @@
   <body>
     <a-scene>
       
-      <a-sky src=https://pachecod.github.io/gallery4/photos/n3freedomofspeech.jpg ></a-sky>
+      <a-sky src="360image.jpg" rotation="0-130 0></a-sky>
 
       <a-text font="kelsonsans" value="Puy de Sancy, France" width="6" position="-2.5 0.25 -1.5"
               rotation="0 15 0"></a-text>
