--- a/mainpage.html
+++ b/mainpage.html
@@ -11,7 +11,7 @@
       
       <a-sky src=3Dimage.jpg ></a-sky>
 
-      <a-text font="kelsonsans" value="Welcome to France ! " width="6" position="-2.5 0.25 -1.5"
+      <a-text font="kelsonsans" value="Welcome to my apartment ! " width="6" position="-2.5 0.25 -1.5"
               rotation="0 15 0"></a-text>
       
     </a-scene>
